# ArrowVortex

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  DASHBOARD.md  GEMINI.md  GPT.md  HANDOFF_DDREAM_FEATURES.md  LLM_INSTRUCTIONS.md  LUA_API.md  README.md  SUBMODULE_INVENTORY.md  build.bat  build.sh  copilot-instructions.md  vcpkg.json
.claude/: settings.local.json
.github/workflows/: codeql.yml  formatting.yml  windows.yml
build_output/: CMakeCache.txt
docs/: DASHBOARD.md  DDREAM_FEATURES.md  HANDOFF.md  LLM_INSTRUCTIONS.md  PROJECT_SUMMARY.md  ROADMAP.md
experiments/sym_model_v2/: vocab.json
lib/gist/libs/kiss_fft130/: _kiss_fft_guts.h  kiss_fft.c  kiss_fft.h
lib/gist/src/: CoreFrequencyDomainFeatures.cpp  CoreFrequencyDomainFeatures.h  Gist.cpp  Gist.h  MFCC.cpp  MFCC.h  OnsetDetectionFunction.cpp  OnsetDetectionFunction.h  WindowFunctions.cpp  WindowFunctions.h  Yin.cpp  Yin.h
lib/libaca/inc/: Feature.h  KeyFromChroma.h  ToolCcf.h  ToolConversion.h  ToolGmm.h  ToolGmmClassifier.h  ToolLeaveOneOutCrossVal.h  ToolNmf.h  ToolPca.h  ToolPreProc.h  ToolSeqFeatureSel.h  ToolSimpleDtw.h  ToolSimpleKmeans.h  ToolSimpleKnn.h
lib/libaca/inc/helper/: Matrix.h  RingBuffer.h
lib/libaca/src/: BeatHisto.cpp  CMakeLists.txt  Chord.cpp  FeatureFromBlock.cpp  Key.cpp  Pitch.cpp  PitchFromBlock.cpp  Spectrogram.cpp  ToolBlockAudio.cpp  ToolFingerprint.cpp  ToolGammatone.cpp  ToolLeaveOneOutCrossVal.cpp  ToolPca.cpp  ToolSeqFeatureSel.cpp  ToolSimpleDtw.cpp  ToolViterbi.cpp
scripts/: chart_stats.lua  prepare_sanity_data.py  quantize_4th.lua  test.lua
src/: Version.h
src/Audio/: AnalyzeKey.cpp  ConvertToOgg.cpp  FindOnsets.cpp  History.cpp  Minimap.h  Notefield.cpp  Statusbar.cpp  Statusbar.h  StructureAnalyzer.cpp  View.cpp
src/Audio/build_output/: CMakeCache.txt
src/Core/: ByteStream.cpp  ByteStream.h  CMakeLists.txt  Canvas.cpp  Canvas.h  Draw.cpp  FontData.cpp  FontManager.cpp  Gui.cpp  GuiContext.cpp  GuiDialog.cpp  GuiDialog.h  GuiDraw.cpp  GuiManager.cpp  GuiWidget.cpp  ImageLoader.cpp  ImageLoader.h  Input.cpp  QuadBatch.cpp  QuadBatch.h  Renderer.cpp  Shader.cpp  Slot.cpp  StringUtils.cpp  TextDraw.cpp  TextLayout.cpp  Texture.h  TextureImpl.cpp  TextureImpl.h  Theme.cpp  Theme.h  Utils.h  Vector.h  Version.cpp  Version.h  WideString.cpp  WideString.h  WidgetsColor.cpp  WidgetsLayout.cpp  WidgetsScroll.cpp  (+5 more)
src/Core/Graphics/: Image.cpp
src/Core/System/: Thread.cpp
src/Core/Utils/: Polyfit.h
src/Core/build_output/: CMakeCache.txt
src/Dialogs/: AdjustSync.cpp  AdjustTempo.cpp  AdjustTempoSM5.cpp  BatchDDC.cpp  BatchDDC.h  BgChanges.cpp  BgChanges.h  CMakeLists.txt  ChartList.cpp  ChartProperties.cpp  ChartProperties.h  ChartStatistics.cpp  ChartStatistics.h  CustomSnap.cpp  DancingBot.cpp  Dialog.cpp  Dialog.h  DialogContextMenu.cpp  DialogContextMenu.h  GenerateNotes.cpp  GoTo.cpp  GoTo.h  LabelBreakdown.cpp  LabelBreakdown.h  LyricsEditor.cpp  LyricsEditor.h  NewChart.cpp  Preferences.cpp  Preferences.h  PreviewSettings.cpp  PreviewSettings.h  SongProperties.cpp  SongProperties.h  TempoBreakdown.cpp  ThemeEditor.cpp  ThemeEditor.h  WaveformSettings.cpp  WaveformSettings.h  Zoom.cpp
src/Dialogs/build_output/: CMakeCache.txt
src/Editor/: Action.cpp  Action.h  AnalyzeKey.cpp  AnalyzeKey.h  Aubio.cpp  Aubio.h  Butterworth.cpp  CMakeLists.txt  Common.cpp  ConvertToOgg.cpp  ConvertToOgg.h  Editing.cpp  Editing.h  Editor.cpp  Editor.h  FindOnsets.cpp  FindOnsets.h  FindTempo.cpp  FindTempo.h  History.cpp  LoadMp3.cpp  LoadOgg.cpp  LoadWav.cpp  Menubar.cpp  Menubar.h  Minimap.cpp  Minimap.h  Music.cpp  Music.h  Notefield.cpp  Notefield.h  NotefieldPreview.cpp  NotefieldPreview.h  RatingEstimator.cpp  Selection.cpp  Selection.h  Shortcuts.cpp  Sound.cpp  Sound.h  Spectrogram.cpp  (+11 more)
src/Editor/build_output/: CMakeCache.txt
src/Managers/: CMakeLists.txt  ChartMan.cpp  LuaMan.cpp  LuaMan.h  LyricsMan.cpp  LyricsMan.h  MetadataMan.cpp  MetadataMan.h  MiningMan.cpp  MiningMan.h  NoteMan.cpp  NoteMan.h  NoteskinMan.cpp  SimfileMan.cpp  SimfileMan.h  StyleMan.cpp  TempoMan.cpp  TempoMan.h
src/Managers/build_output/: CMakeCache.txt
src/Simfile/: CMakeLists.txt  Chart.cpp  Chart.h  Common.h  LoadDwi.cpp  LoadOsu.cpp  LoadSm.cpp  NoteList.cpp  Notes.h  Parsing.cpp  Parsing.h  SaveOsu.cpp  SaveSm.cpp  SegmentGroup.cpp  SegmentList.cpp  Segments.cpp  Simfile.cpp  Simfile.h  Tempo.cpp  Tempo.h  TimingData.cpp  TimingData.h
src/Simfile/build_output/: CMakeCache.txt
src/System/: ArrowVortex.rc  CMakeLists.txt  Debug.cpp  Debug.h  File.cpp  File.h  Mixer.cpp  OpenGL.h  System.cpp  System.h  Thread.cpp  Thread.h
src/System/build_output/: CMakeCache.txt
src/Vortex/Edit/: StreamGenerator.cpp  StreamGenerator.h
