list(APPEND INC
	"ByteStream.h"
	"Canvas.h"
	"Draw.h"
	"FontData.h"
	"FontManager.h"
	"Gui.h"
	"GuiContext.h"
	"GuiDialog.h"
	"GuiDraw.h"
	"GuiManager.h"
	"GuiWidget.h"
	"ImageLoader.h"
	"Input.h"
	"MapUtils.h"
	"NonCopyable.h"
	"Polyfit.h"
	"QuadBatch.h"
	"Renderer.h"
	"Reference.h"
	"Shader.h"
	"Slot.h"
	"StringUtils.h"
	"Text.h"
	"TextDraw.h"
	"TextLayout.h"
	"Texture.h"
	"TextureImpl.h"
	"Utils.h"
	"Vector.h"
	"VectorUtils.h"
	"WideString.h"
	"Widgets.h"
	"WidgetsLayout.h"
	"Xmr.h")

list(APPEND SRC
	"ByteStream.cpp"
	"Canvas.cpp"
	"Draw.cpp"
	"FontData.cpp"
	"FontManager.cpp"
	"Gui.cpp"
	"GuiContext.cpp"
	"GuiDialog.cpp"
	"GuiDraw.cpp"
	"GuiManager.cpp"
	"GuiWidget.cpp"
	"ImageLoader.cpp"
	"Input.cpp"
	"QuadBatch.cpp"
	"Renderer.cpp"
	"Shader.cpp"
	"Slot.cpp"
	"StringUtils.cpp"
	"Text.cpp"
	"TextDraw.cpp"
	"TextLayout.cpp"
	"Texture.cpp"
	"TextureImpl.cpp"
	"Utils.cpp"
	"WideString.cpp"
	"WidgetsColor.cpp"
	"WidgetsLayout.cpp"
	"WidgetsScroll.cpp"
	"WidgetsSelect.cpp"
	"WidgetsSimple.cpp"
	"WidgetsText.cpp"
	"Xmr.cpp")

add_library(Core STATIC ${SRC} ${INC})
target_link_libraries(Core PRIVATE Freetype::Freetype System OpenGL::GL)
target_include_directories(Core PRIVATE ${Stb_INCLUDE_DIR})
